--- a/src/main/resources/templates/corp/main_page.html
+++ b/src/main/resources/templates/corp/main_page.html
@@ -17,7 +17,11 @@ function hideSubmenu() {
     document.querySelector('.corp-overlay').classList.remove('active');
 }
 
-//Thymeleaf에서 사용하는 `[[...]]` 문법은 HTML 주석처럼 무시되지 않고, 브라우저로 보내지기 전에 서버에서 먼저 처리되기 때문입니다.
+//Thymeleaf의 js에서 사용하는 `[[...]]` 문법은 HTML 주석처럼 무시되지 않고, 브라우저로 보내지기 전에 서버에서 먼저 처리되기 때문입니다. 객체가 전달안되면 오류남
+
+document.querySelector('')
+
+
 
 
 </script>
@@ -35,8 +39,8 @@ function hideSubmenu() {
         <div class="corp-dashboard-subtitle">
             효율적인 채용 관리로 최고의 인재를 찾아보세요 <br>
             <hr>
-            로그인 정보: <br>
-            
+            로그인 정보: 
+            <br>
             <div th:if="${user == null}">
             	<div>로그인을 먼저 진행해주셔야 사용자 정보를 보실 수 있습니다. </div>
             </div>
@@ -53,6 +57,14 @@ function hideSubmenu() {
 		            	<p>이거는 기업회원이 아니면 보여지는 문자</p>
 		            </div>
 	            </div>
+	            
+	            <div>
+	            	<button type="button" class="testEncrypt">암호화</button>
+	            		<div>암호화 된 핸드폰 번호 : <span th:text="${encryptPhone}"></span> </div>
+	            	<button type="button" class="testEncrypt">복호화</button>
+	            		<div>복호화 된 핸드폰 번호 : <span th:text="${decryptPhone}"></span> </div>
+	            </div>
+	            
             </div>
         </div>
     </div>
