--- a/src/main/resources/templates/corp/applicant/applicant.html
+++ b/src/main/resources/templates/corp/applicant/applicant.html
@@ -18,12 +18,7 @@
 			<div class="main-content">
 				<div class="search-section">
 					<div class="search-row">
-						<select name="size" style="width: 80px; min-width: 80px;">
-							<option value="10">10개</option>
-							<option value="25">25개</option>
-							<option value="50">50개</option>
-							<option value="100">100개</option>
-						</select> <select name="postingStatus">
+						<select name="postingStatus">
 							<option value="">전체 공고</option>
 							<option value="progress">진행중인 공고</option>
 							<option value="closed">마감된 공고</option>
@@ -45,7 +40,7 @@
 				</div>
 
 				<div class="table-container">
-					<div class="table-header">지원자 목록</div>
+					<div class="table-header">검색 결과: 45명 (총 125명 중)</div>
 
 					<div class="table-columns">
 						<div class="col-name">지원자명</div>
