--- a/src/main/resources/static/corp/jobPosting/myJobPostingListPage.css
+++ b/src/main/resources/static/corp/jobPosting/myJobPostingListPage.css
@@ -218,7 +218,7 @@
 
 /* 보고서 버튼 */
 .bottom-start-container table td:nth-child(5) button {
-    background-color: #28a745;
+    background-color: #6495ED;
     width: 60px;
 }
 
